--- a/pcrmgmtAPP/templates/base.html
+++ b/pcrmgmtAPP/templates/base.html
@@ -9,8 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- Custom Styles -->
+    <!-- Main Styles -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!-- Custom CSS for squares, new design, etc. -->
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
 <body class="{{ current_theme }}">
     <!-- Navigation Bar -->
@@ -24,15 +26,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                        <!-- Authenticated Navigation (in your desired order) -->
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'isl_logs' %}">ISL Logs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'office_accounts' %}">Office Accounts</a>
+                            <a class="nav-link" href="{% url 'rma_manager' %}">RMA Manager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
+                            <a class="nav-link" href="{% url 'office_accounts' %}">Office Accounts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'garantie_list' %}">Garantie Tracker</a>
@@ -40,10 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'settings' %}">Settings</a>
                         </li>
-                        <!-- If you meant to remove the duplicate "Tasks", remove the next line -->
-                        <!-- <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
-                        </li> -->
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logs' %}">Logs</a>
                         </li>
@@ -57,7 +57,6 @@
                             </form>
                         </li>
                     {% else %}
-                        <!-- Unauthenticated Navigation -->
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
