--- a/pcrmgmtAPP/templates/base.html
+++ b/pcrmgmtAPP/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <!-- Custom CSS for squares, new design, etc. -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body class="{{ current_theme }}">
     <!-- Navigation Bar -->
